fix(overflow): 🐛 overflow content should fill parent container

--- a/resources/skins.citizen.styles/components/OverflowElements.less
+++ b/resources/skins.citizen.styles/components/OverflowElements.less
@@ -31,6 +31,7 @@
 
 	&-content {
 		overflow-x: auto;
+		width: 100%;
 
 		.wikitable {
 			display: table;
